# CADai

./: README.md
Backend-Services/src/: config.py
Backend-Services/src/models/: scene.py
Backend-Services/src/routers/: agent.py
Backend-Services/src/services/agent/: __init__.py  tools.py
backend/: .env.example  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/models/: agent.py
backend/src/routers/: health.py
backend/src/services/agent/: engine.py
docs/: README.md  ai-agent-design.md  api-design.md  architecture.md  ideas.md  notes&future.md  progress.md  references.md  roadmap.md  tech-stack.md
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/AgentPanel/: AgentPanel.jsx
frontend/src/components/BooleanBar/: BooleanBar.jsx
frontend/src/components/CommandPalette/: CommandPalette.jsx
frontend/src/components/ObjectTree/: ObjectTree.jsx
frontend/src/components/PropertyPanel/: PropertyPanel.jsx
frontend/src/components/SectionBar/: SectionBar.jsx
frontend/src/components/ShortcutsOverlay/: ShortcutsOverlay.jsx
frontend/src/components/StatusBar/: StatusBar.jsx
frontend/src/components/Toolbar/: Toolbar.jsx
frontend/src/components/Viewport/: SceneObject.jsx  Viewport.jsx
frontend/src/hooks/: useKeyboardShortcuts.js
frontend/src/services/: api.js  csg.js  exporter.js  importer.js  inspect.js  materials.js  project.js
frontend/src/store/: sceneStore.js
