[project]
name = "backend-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "google-adk>=1.29.0",
    "litellm>=1.83.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
]
